force-app/main/default/objects/aos_Assessment_Score__c/aos_Assessment_Score__c.object-meta.xml
<CustomObject>
    <label>Assessment Score</label>
    <nameField>
        <label>Assessment Score Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assessment Scores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>