force-app/main/default/objects/aos_Assessment_Score__c/fields/aos_Animal__c.field-meta.xml
<CustomField>
    <fullName>aos_Animal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Animal</label>
    <referenceTo>animalos__Animal__c</referenceTo>
    <relationshipLabel>Assessment Scores</relationshipLabel>
    <relationshipName>Assessment_Scores</relationshipName>
    <type>Lookup</type>
</CustomField>