force-app/main/default/objects/aos_Assessment_Score__c/fields/aos_Assessment__c.field-meta.xml
<CustomField>
    <fullName>aos_Assessment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assessment</label>
    <referenceTo>animalos__Assessment__c</referenceTo>
    <relationshipLabel>Assessment Scores</relationshipLabel>
    <relationshipName>Assessment_Scores</relationshipName>
    <type>Lookup</type>
</CustomField>