force-app/main/default/objects/aos_Assessment_Score__c/fields/aos_Behaviour_Comments__c.field-meta.xml
<CustomField>
    <fullName>aos_Behaviour_Comments__c</fullName>
    <label>Behaviour Comments</label>
    <type>TextArea</type>
</CustomField>