force-app/main/default/objects/aos_Assessment_Score__c/fields/aos_Behavioural_Score__c.field-meta.xml
<CustomField>
    <fullName>aos_Behavioural_Score__c</fullName>
    <label>Behavioural Score</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>B1</fullName>
            </value>
            <value>
                <fullName>B2</fullName>
            </value>
            <value>
                <fullName>B3</fullName>
            </value>
            <value>
                <fullName>B4</fullName>
            </value>
            <value>
                <fullName>B5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>