force-app/main/default/objects/aos_Assessment_Score__c/fields/aos_Behavioural_Score_for_Reporting__c.field-meta.xml
<CustomField>
    <fullName>aos_Behavioural_Score_for_Reporting__c</fullName>
    <formula>CASE(
aos_Behavioural_Score__c,
&quot;B1&quot;, 1,
&quot;B2&quot;, 2,
&quot;B3&quot;, 3,
&quot;B4&quot;, 4,
&quot;B5&quot;, 5,
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Behavioural Score for Reporting</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>