force-app/main/default/objects/aos_Assessment_Score__c/fields/aos_Created_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>aos_Created_Date_Time__c</fullName>
    <formula>TEXT(DATETIMEVALUE(CreatedDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Date/Time</label>
    <type>Text</type>
</CustomField>