force-app/main/default/objects/aos_Assessment_Score__c/fields/aos_Medical_Comments__c.field-meta.xml
<CustomField>
    <fullName>aos_Medical_Comments__c</fullName>
    <complianceGroup>Not Categorized</complianceGroup>
    <label>Medical Comments</label>
    <type>TextArea</type>
</CustomField>