force-app/main/default/objects/aos_Assessment_Score__c/fields/aos_Medical_Score__c.field-meta.xml
<CustomField>
    <fullName>aos_Medical_Score__c</fullName>
    <label>Medical Score</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>M1</fullName>
            </value>
            <value>
                <fullName>M2</fullName>
            </value>
            <value>
                <fullName>M3</fullName>
            </value>
            <value>
                <fullName>M4</fullName>
            </value>
            <value>
                <fullName>M5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>