force-app/main/default/objects/aos_Assessment_Score__c/fields/aos_Medical_Score_for_Reporting__c.field-meta.xml
<CustomField>
    <fullName>aos_Medical_Score_for_Reporting__c</fullName>
    <formula>CASE(
aos_Medical_Score__c,
&quot;M1&quot;, 1,
&quot;M2&quot;, 2,
&quot;M3&quot;, 3,
&quot;M4&quot;, 4,
&quot;M5&quot;, 5,
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Medical Score for Reporting</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>