force-app/main/default/objects/aos_Assessment_Score__c/fields/aos_Score__c.field-meta.xml
<CustomField>
    <fullName>aos_Score__c</fullName>
    <label>Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>