force-app/main/default/objects/aos_Assessment_Score__c/fields/aos_Score_Category__c.field-meta.xml
<CustomField>
    <fullName>aos_Score_Category__c</fullName>
    <label>Score Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Behaviour in kennel or yard</fullName>
            </value>
            <value>
                <fullName>Eating</fullName>
            </value>
            <value>
                <fullName>Kennel Overnight</fullName>
            </value>
            <value>
                <fullName>Leaving kennel</fullName>
            </value>
            <value>
                <fullName>Meeting a person out of the kennel</fullName>
            </value>
            <value>
                <fullName>Placing lead/harness on</fullName>
            </value>
            <value>
                <fullName>Response to interacting with person</fullName>
            </value>
            <value>
                <fullName>Resting during day</fullName>
            </value>
            <value>
                <fullName>Seeing another dog out of kennel</fullName>
            </value>
            <value>
                <fullName>Walking on lead</fullName>
            </value>
            <value>
                <fullName>When first given a toy</fullName>
            </value>
            <value>
                <fullName>When person at front of kennel</fullName>
            </value>
            <value>
                <fullName>When person entering kennel or yard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>