force-app/main/default/objects/aos_Assessment_Score__c/fields/aos_Score_ID__c.field-meta.xml
<CustomField>
    <fullName>aos_Score_ID__c</fullName>
    <displayFormat>AS-{00000}</displayFormat>
    <label>Score ID</label>
    <type>AutoNumber</type>
</CustomField>