force-app/main/default/objects/aos_Assessment_Score__c/recordTypes/aos_Behavioural_Score.recordType-meta.xml
<RecordType>
    <fullName>aos_Behavioural_Score</fullName>
    <active>true</active>
    <label>Behavioural Score</label>
</RecordType>