force-app/main/default/objects/aos_Assessment_Score__c/recordTypes/aos_Medical_Score.recordType-meta.xml
<RecordType>
    <fullName>aos_Medical_Score</fullName>
    <active>true</active>
    <label>Medical Score</label>
</RecordType>